# serial-platform

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md
.github/workflows/: ci.yml  release.yml
adapters/: README.md
adapters/codex/: config.linux.example.toml  config.windows.example.toml
adapters/opencode/: opencode.linux.example.jsonc  opencode.windows.example.jsonc
crates/serial-mcp/: Cargo.toml
crates/serial-mcp/src/: api.rs  capture.rs  config.rs  main.rs  mcp.rs  render.rs  session.rs  tools.rs
crates/serial-protocol/: Cargo.toml
crates/serial-protocol/src/: lib.rs
crates/serialctl/: Cargo.toml
crates/serialctl/src/: api.rs  config.rs  display.rs  i18n.rs  main.rs  tui.rs  ws.rs
crates/seriald/: Cargo.toml
crates/seriald/src/: api.rs  auth.rs  config.rs  control.rs  journal.rs  lib.rs  main.rs  registry.rs  ring.rs  slot.rs
