[workspace]
members = [
  "crates/serial-protocol",
  "crates/seriald",
  "crates/serialctl",
  "crates/serial-mcp",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
version = "0.2.1"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "query", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crc32fast = "1.4"
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6.0"
futures-util = "0.3"
rand = "0.9"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rpassword = "7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = { version = "4.9", default-features = false }
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-serial = { version = "5.5", default-features = false }
tokio-tungstenite = "0.28"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
strip = true
