[package]
name = "serialctl"
description = "Interactive multi-session client for seriald"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
futures-util.workspace = true
ratatui.workspace = true
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
serial-protocol = { path = "../serial-protocol" }
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
