[package]
name = "seriald"
description = "Shared serial-port daemon"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
crc32fast.workspace = true
directories.workspace = true
futures-util.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serial-protocol = { path = "../serial-protocol" }
serialport.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-serial.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23"
